# src/index.ts
@@ -17,6 +17,7 @@ import contactRoutes from "./routes/contactRoutes";
 import notificationRoutes from "./routes/notificationRoutes";
 import postRoutes from "./routes/postRoutes";
 import reportRoutes from "./routes/reportRoutes";
+import searchRoutes from "./routes/searchRoutes";
 import shareRoutes from "./routes/shareRoutes";
 import tagRoutes from "./routes/tagRoutes";
 import userRoutes from "./routes/userRoutes";
@@ -58,6 +59,7 @@ app.use("/api/posts", postRoutes);
 app.use("/api/comments", commentRoutes);
 app.use("/api/reports", reportRoutes);
 app.use("/api/notifications", notificationRoutes);
+app.use("/api/search", searchRoutes);
 app.use("/api/tags", tagRoutes);
 app.use("/api/shares", shareRoutes);
 app.use("/api/contact", contactRoutes);
